# bicameral-mcp

./: .gitignore  Bicameral-Arc.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  REPORT.md  TODO.md  code_locator_runtime.py  consent.py  context.py  contracts.py  local_counters.py  plan-48-pre-push-drift-hook.md  plan-codegenome-llm-drift-judge.md  plan-codegenome-phase-1-2.md  plan-codegenome-phase-3.md  plan-codegenome-phase-4.md  ports.py  preflight_telemetry.py  pyproject.toml  pytest.ini  requirements.txt  server.py  setup_wizard.py  smithery.yaml  telemetry.py
.claude/: CLAUDE.md  settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: label-merged-to-dev.yml  lint-and-typecheck.yml  preflight-eval.yml  secret-scan.yml  test-mcp-regression.yml  test-schema-persistence.yml
adapters/: CLAUDE.md  __init__.py  code_locator.py  codegenome.py  ledger.py
assets/: dashboard.html  git-for-specs-deck.html
classify/: __init__.py  heuristic.py
cli/: __init__.py  branch_scan.py  classify.py
code_locator/: __init__.py  config.py  models.py
code_locator/fusion/: __init__.py  rrf.py
codegenome/: __init__.py  _diff_dispatch.py  adapter.py  bind_service.py  confidence.py  config.py  continuity.py  continuity_service.py  contracts.py  deterministic_adapter.py  diff_categorizer.py  drift_classifier.py  drift_service.py
dashboard/: server.py  sse.py
docs/: ARCHITECTURE_PLAN.md  BACKLOG.md  CONCEPT.md  DEV_CYCLE.md  META_LEDGER.md  QOR_VS_ADHOC_COMPARISON.md  SHADOW_GENOME.md  SYSTEM_STATE.md  decision-level.md  governance.example.yml  preflight-failure-scenarios.md  semantic-drift-governance.md  spec-governance-feedback.md  v2-desync-optimization-guide.md
events/: materializer.py  models.py  team_adapter.py  writer.py
governance/: __init__.py  config.py  contracts.py  engine.py  finding_factories.py
handlers/: CLAUDE.md  __init__.py  action_hints.py  analysis.py  bind.py  brief.py  decision_status.py  detect_drift.py  evaluate_governance.py  gap_judge.py  history.py  ingest.py  link_commit.py  list_unclassified_decisions.py  preflight.py  ratify.py  record_bypass.py  reset.py  resolve_collision.py  resolve_compliance.py  scan_branch.py  search_decisions.py  set_decision_level.py  sync_middleware.py  update.py  usage_summary.py
ledger/: CLAUDE.md  __init__.py  adapter.py  ast_diff.py  canonical.py  client.py  drift.py  queries.py  schema.py  status.py
mocks/: README.md
scripts/: sim_accountable.py
skills/: CONSTANTS.md
telemetry-relay/: package.json  wrangler.toml
tests/: CLAUDE.md  README.md  _extract_headless.py  _extraction_matcher.py  _extraction_metrics.py  bench_drift.py  check_doc_alignment.py  conftest.py  eval_code_locator.py  eval_decision_relevance.py  generate_e2e_report.py  regen_extraction_fixtures.py  test_alpha_contract.py  test_alpha_flow.py  test_ast_diff.py  test_authoritative_ref.py  test_b2_cosmetic_hint.py  test_bind.py  test_branch_scan_cli.py  test_bulk_classify_cli.py  test_bypass_event_persistence.py  test_classify_heuristic.py  test_code_locator_runtime.py  test_codegenome_adapter.py  test_codegenome_bind_integration.py  test_codegenome_confidence.py  test_codegenome_config.py  test_codegenome_continuity.py  test_codegenome_continuity_ledger.py  test_codegenome_continuity_service.py  test_codegenome_drift_classifier.py  test_codegenome_drift_service.py  test_codegenome_l1_exemption.py  test_codegenome_phase4_link_commit.py  test_codegenome_phase4_resolve_compliance.py  test_codegenome_resolve_compliance_persistence.py  test_compliance_cache_semantics.py  test_compliance_check_schema.py  test_consent_notice.py  test_coverage_loop.py  (+72 more)
visual-plan/: requirements.txt  server.py
(+141 files in other folders)
